# CycleGan

./: .gitignore  README.md  pyproject.toml
.dvc/: config
checkpoints/: best_model.pth.dvc
src/cyclegan/: Generator_L2S.py  Generator_S2L.py  MultiScaleDiscriminator_Landsat.py  MultiScaleDiscriminator_Sentinel.py  PatchGANDiscriminator.py  sam_loss.py  train.py
src/cyclegan/api/: config.yaml  main.py  test_api.py
src/cyclegan/dataset/: clean_data.py  clean_data_bymask.py  dataset.py  get_landsat8_data.py  mean_std.txt  plot_rgb.py  stats.py  stats_angles.py  test.py
