[project]
authors = [{name = "RHOUMA", email = "hedi.rhouma@ird.fr"}]
dependencies = []
name = "CycleGan"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cyclegan = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
earthengine-api = ">=1.6.15,<2"
pandas = ">=2.3.3,<3"
requests = ">=2.32.5,<3"
numpy = ">=2.3.4,<3"
psutil = ">=7.1.3,<8"
pytorch = ">=2.8.0,<3"
torchvision = "*"
certifi = ">=2025.10.5,<2026"
rasterio = ">=1.4.3,<2"
matplotlib = ">=3.10.7,<4"
tqdm = ">=4.67.1,<5"
dvc = ">=3.65.0,<4"
fastapi = ">=0.127.0,<0.128"
uvicorn = ">=0.40.0,<0.41"
python-multipart = ">=0.0.21,<0.0.22"
pillow = ">=12.0.0,<13"
